--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       </span>
     </h3>
     <button class="btn btn-success" onclick="play()">Play</button>
+    
     <br><br>
-    <p class="btn btn-waring">Song Name <span id="song"></span></p>
+    <p id="idsong" class="btn btn-waring">Song Name <span id="song"></span></p>
   </center>
 
   <script src="main.js"></script>
