--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button class="btn btn-success" onclick="play()">Play</button>
     
     <br><br>
-    <p id="idsong" class="btn btn-waring">Song Name <span id="song"></span></p>
+    <p id="idsong" class="btn btn-waring">Song Is <span id="song"></span></p>
   </center>
 
   <script src="main.js"></script>
